--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,72 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
+# File: azure-pipelines.yaml
+
+name: $(Date:yyyyMMdd)$(Rev:.r)
 
 trigger:
-- main
+  branches:
+    include:
+      - master
+  paths:
+    exclude:
+      - docs/*
 
-pool:
-  vmImage: ubuntu-latest
+pr:
+  - master
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+resources:
+  - repo: self
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+variables:
+  - template: variables.yaml
+
+stages:
+  - stage: Tag
+    displayName: Semantic release
+    pool:
+        vmImage: 'vs2017-win2016'
+    jobs:
+      - job: release
+        displayName: semantic release
+        variables:
+          _GITHUB_TOKEN: $(GitHubToken)
+          _NPM_TOKEN: $(NpmToken)
+        steps:
+          - script:  >
+              npx 
+              -p semantic-release
+              -p @semantic-release/changelog
+              -p @semantic-release/git
+              -p semantic-release-ado
+              semantic-release
+            displayName: 'Tag release'
+            env: { GH_TOKEN: $(_GITHUB_TOKEN), NPM_TOKEN: $(_NPM_TOKEN) }
+          - script: echo $(nextRelease)
+          - powershell: |
+              echo "##vso[task.setvariable variable=versionNumber;isOutput=true]$(nextRelease)"
+            name: setOutputVar
+
+  - stage: CI
+    displayName: Continuous Integration
+    dependsOn: Tag
+    variables:
+      _NEXT_RELEASE_TAG: $[ stageDependencies.Tag.release.outputs['setOutputVar.versionNumber'] ]
+    pool:
+        name: Hosted VS2017
+        demands: npm
+    jobs:
+      - template: ./build.yaml
+        parameters:
+          tag: $(_NEXT_RELEASE_TAG)
+      
+#  - stage: CD
+#    displayName: Continuous Deployment
+#    condition: 
+#    jobs:
+#      - template: ./deploy.yaml
+#        parameters:
+#          buildLocation: $(Pipeline.Workspace)/**/*.zip
+#          resourceGroupName: $(serviceConnectionRG)
+#          azureSubscription: $(serviceConnection)
+#          environment: '$(pushBranch)'
+#          appName: '$(appName)'
+#          notifyUsers: '$(notifyUsers)'
