fixing master branch

--- a/yarn-workspaces-master/package.json
+++ b/yarn-workspaces-master/package.json
@@ -22,7 +22,7 @@
   },
   "release": {
     "branches": [
-      "main"
+      "master", "main"
     ],
     "plugins": [
       "@semantic-release/commit-analyzer",
